feat: advanced LLM structured menu-place mapping, performance logs, map UI, manual location toggle